# nuit-info-actix

./: .gitignore  docker-compose.backend-dev.yml  docker-compose.db.yml  docker-compose.frontend-dev.yml  docker-compose.prod.yml  docker-compose.yml  readme.md
.github/workflows/: backend.yaml  main.yaml  sam-pipeline.yml
backend/: .env  Cargo.toml  Dockerfile
backend/events/: bio-promotion.json  capture-co2.json  car-sharing.json  carbon-taxe.json  cartel-cooperation.json  christmas-tree.json  dam.json  dishwasher.json  energetic-transition.json  example.json  forest-exploitation-reduction.json  highway-protests.json  liste.txt  meat-tax.json  nuclear copy.json  nuclear-financing.json  nuclear-fusion.json  nuclear.json  offshore-windmills.json  one-child-policy.json  plastic-bags.json  pollution-ad.json  protect-natural-areas.json  reusable-nappie.json  thermic-vehicles.json  washing-machines.json  wood-heating.json
backend/events/notifs/: manif.json
backend/migrations/: V1_create_users_table.sql
backend/src/: config.rs  cors.rs  errors.rs  main.rs  prelude.rs  veep.rs
backend/src/database/: mod.rs  users.rs
backend/src/game/: authorization.rs  measure.rs  mod.rs  penalty.rs
backend/src/measure/: mod.rs
backend/src/models/: mod.rs
backend/src/notification/: mod.rs
backend/src/user/: mod.rs
communication/: plan.md
frontend/: .build-info.json  .env.validator.js  .gitignore  Dockerfile  package-lock.json  package.json  static.serve.json
frontend/src/: App.js
frontend/src/app/: Document.tsx  Providers.tsx
init-db/: 01_create_roles.sql
(+23 files in other folders)
