[package]
name = "nuitdelinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
lazy_static = "1.4.0"
config = "0.13"
deadpool-postgres = { version = "0.11", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
derive_more = "0.99.17"
dotenvy = "0.15"
